<resources>
    <string name="app_name">My Application</string>
    <string name="get_start">Capture the moment with a professional photographer</string>
    <string name="get_start1">book a session now and receive 10% off your first order</string>
    <string name="get_start2">Start Booking</string>
    <string name="service">Our Services</string>
    <string name="Wed">Wedding</string>
    <string name="bt_1">wedding</string>
    <string name="bt_2">Forever captivated by your self</string>
    <string name="bt_3">"wedding only\n    "</string>
    <string name="bt_4">"               wedding only\nLKR  15,000\n  .Photography coverage for 6 hours\n  .Vediography of the ceremoney\n   "</string>
    <string name="bt_5">wedding and mehandi</string>
    <string name="bt_6">LKR 20,000\n   . Photography coverage for 8 hours\n   . Vediograhy of the ceremoney\n   . Bridal henna shoot</string>
    <string name="bt_7">wedding</string>
    <string name="bt_8">wedding only</string>
    <string name="bt_9">wedding and preshoot</string>
    <string name="bt_10">LKR 25,000\n  . Photography coverage for 10 hours\n  . Vediography of the ceremoney and preeshoot\n  . Pre-wedding photoshoot at the scenic location\n  . Personalized wedding album and digital copies</string>
    <string name="bt_11">Graduation</string>
    <string name="bt_12">golden pack</string>
    <string name="bt_13">LKR 8,000\n  . Professional graduation photoshoot\n  . High quality printed photo album\n  . Access to exclusive graduation party</string>
    <string name="bt_14">Silver pack\n</string>
    <string name="bt_15">LKR 5,000\n  . Graduation photoshoot with basic editing\n  . Digital copies of all photograph\n  . Access to group celebration event</string>
    <string name="bt_16">Bronze pack</string>
    <string name="bt_17">Golden pack</string>
    <string name="bt_18">brozen pack</string>
    <string name="bt_19">LKR 3,500\n  . Basic graduation photoshoot\n  . Digital copies of select photographs\n  . Access to gentral graduation ceremoney</string>
    <string name="bt_20">events</string>
    <string name="bt_21">Ground event</string>
    <string name="bt_22">LKR 35,000\n  . Full coverage of ground event during day and night\n  . Professional photography of key moments and candid shots</string>
    <string name="bt_23">Batch together</string>
    <string name="bt_24">"LKR 25,000\n  . Group photoshoot for the entire graduating batch\n  . Individual portraids and group shots with personalized backgrounds\n  . Standart graduation attire provided "</string>
    <string name="bt_25">Family together</string>
    <string name="bt_26">LKR 20,000\n  . Exclusive family photoshoot with the graduate\n  . Candid photography capturing special movements with family memeber\n  . Personalized graduation gift for the graduate from the family</string>
    <string name="bt_27">How can we conduct you</string>
    <string name="bt_28">"Name: "</string>
    <string name="bt_29">Whatsapp no :</string>
    <string name="bt_30">Phone no :</string>
    <string name="bt_31">Email id :</string>
    <string name="bt_32">"Your order no : "</string>
    <string name="bt_33">Name</string>
    <string name="bt_34">Number</string>
    <string name="bt_35">number</string>
    <string name="b1">Number</string>
    <string name="b2">no</string>
    <string name="b3">email</string>
    <string name="b4">no</string>
    <string name="b5" />
    <string name="b6">If you have any concern about our service or any expectations.Please share then here</string>
    <string name="b8">Note</string>
    <string name="b9">note</string>
    <string name="order">Your order</string>
    <string name="name">Name</string>
    <string name="profile">Wedding Only</string>
    <string name="thankyou">Thank You!</string>
    <string name="confirm1">Confirm</string>
</resources>